tests/96-unterminated.oc.err
96-unterminated.oc:6:15: warning: missing terminating " character [enabled by default]
    string s = "abc;
               ^
96-unterminated.oc:7:13: warning: missing terminating ' character [enabled by default]
    char c = 'a;
             ^
96-unterminated.oc:8:8: warning: missing terminating " character [enabled by default]
    s = "abcd\";
        ^
96-unterminated.oc:9:8: warning: missing terminating " character [enabled by default]
    s = "abc|\
        ^
˜¨1:5.15: invalid source character (")
˜¨1:5.16: invalid source character (\)
˜¨1:5.17: syntax error, unexpected '*'
˜¨1:5.19: invalid source character (")
˜¨1:6.15: invalid source character (")
˜¨1:7.9: syntax error, unexpected TOK_IDENT
˜¨1:7.13: invalid source character (')
˜¨1:8.8: invalid source character (")
˜¨1:8.13: invalid source character (\)
˜¨1:8.14: invalid source character (")
˜¨1:9.8: invalid source character (")
˜¨1:9.12: invalid source character (|)
˜¨1:11.8: invalid token (23foobar)
˜¨1:11.8: syntax error, unexpected $undefined, expecting TOK_IDENT
